--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
+    "openai": "^6.10.0",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
