feat: Atualizar logo oficial do NUMATU e corrigir caminho no .env.local

--- a/.env.local
+++ b/.env.local
@@ -6,7 +6,7 @@ JWT_SECRET=numatu-secret-key-development-2025
 
 # Application Configuration
 VITE_APP_TITLE=NUMATU
-VITE_APP_LOGO=https://seu-logo-url.com/logo.png
+VITE_APP_LOGO=/assets/images/numatu_logo_official.png
 
 # WhatsApp Business API Configuration
 WHATSAPP_API_URL=https://graph.facebook.com/v18.0
