--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.11",
     "openai": "^6.10.0",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
@@ -95,6 +96,7 @@
     "@types/express": "4.17.21",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^24.7.0",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.4",
